force-app/main/default/objects/OrderItem/fields/Account_Contract__c.field-meta.xml
<CustomField>
    <fullName>Account_Contract__c</fullName>
    <formula>HYPERLINK(
    &quot;/lightning/r/Contract/&quot; &amp; Order.ContractId &amp; &quot;/view&quot;,
    Order.Contract.Account.Name,
    &quot;_blank&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Contract</label>
    <type>Text</type>
</CustomField>