force-app/main/default/objects/OrderItem/fields/Attendancy_Status__c.field-meta.xml
<CustomField>
    <fullName>Attendancy_Status__c</fullName>
    <description>relevant for series type</description>
    <label>Attendance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Not Attended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>