force-app/main/default/objects/OrderItem/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <formula>ISPICKVAL( Contract__r.Status, &quot;Activated&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Activated</label>
    <type>Checkbox</type>
</CustomField>