force-app/main/default/objects/OrderItem/fields/Desk_Average_Monthly_Income__c.field-meta.xml
<CustomField>
    <fullName>Desk_Average_Monthly_Income__c</fullName>
    <formula>Standard_Income__c  / Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Desk Average Monthly Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>