force-app/main/default/objects/OrderItem/fields/Future_Renewal_Parking_Increase__c.field-meta.xml
<CustomField>
    <fullName>Future_Renewal_Parking_Increase__c</fullName>
    <formula>Parking_Income__c *( Future_Renewal_Price_Increase__c +1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Future Renewal Parking Increase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>