force-app/main/default/objects/OrderItem/fields/Future_Renewal_Price_Increase__c.field-meta.xml
<CustomField>
    <fullName>Future_Renewal_Price_Increase__c</fullName>
    <formula>IF(
   Contract__r.Current_Renewal_Iteration__c = 0,
  0,
  IF(Contract__r.Current_Renewal_Iteration__c = 1,
     Renewal_Price_Adjustment__c,
     Renewal_Price_Adjustment_2__c
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Future Renewal Price Increase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>