force-app/main/default/objects/OrderItem/fields/Future_Renewal_Standard_Increase__c.field-meta.xml
<CustomField>
    <fullName>Future_Renewal_Standard_Increase__c</fullName>
    <formula>Standard_Income__c *(1+Future_Renewal_Price_Increase__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Future Renewal Standard Increase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>