force-app/main/default/objects/OrderItem/fields/Number_of_Monthly_Payments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Monthly_Payments__c</fullName>
    <label>Number of Monthly Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>