force-app/main/default/objects/OrderItem/fields/Order_Product_Origin__c.field-meta.xml
<CustomField>
    <fullName>Order_Product_Origin__c</fullName>
    <label>Order Product Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Original</fullName>
                <default>true</default>
                <label>Original</label>
            </value>
            <value>
                <fullName>Changed</fullName>
            </value>
            <value>
                <fullName>Added</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>