force-app/main/default/objects/OrderItem/fields/Other_Income__c.field-meta.xml
<CustomField>
    <fullName>Other_Income__c</fullName>
    <formula>IF( OR (Product_Sub_Type_Name__c = &apos;Parking spot&apos;,Product_Type__c = &apos;Standard Products&apos;) , 0,UnitPrice * Quantity)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>