force-app/main/default/objects/OrderItem/fields/Parking_Income__c.field-meta.xml
<CustomField>
    <fullName>Parking_Income__c</fullName>
    <formula>IF(   Product_Sub_Type_Name__c = &apos;Parking spot&apos;,  UnitPrice * Quantity, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parking Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>