force-app/main/default/objects/OrderItem/fields/Price_Adjustment_Date_DM__c.field-meta.xml
<CustomField>
    <fullName>Price_Adjustment_Date_DM__c</fullName>
    <description>This field will be used on reports to notify the date on which a manual price adjustment is required - This is for contracts sourced from DM only</description>
    <inlineHelpText>This field will be used on reports to notify the date on which a manual price adjustment is required - This is for contracts sourced from DM only</inlineHelpText>
    <label>Price Adjustment Date DM</label>
    <type>Date</type>
</CustomField>