force-app/main/default/objects/OrderItem/fields/Product_Sub_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Type_Name__c</fullName>
    <label>Product Sub Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>