force-app/main/default/objects/OrderItem/fields/Series_Type_Status__c.field-meta.xml
<CustomField>
    <fullName>Series_Type_Status__c</fullName>
    <label>Series Type Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Not Attended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>