force-app/main/default/objects/OrderItem/fields/Standard_Income__c.field-meta.xml
<CustomField>
    <fullName>Standard_Income__c</fullName>
    <formula>IF(  Product_Type__c = &apos;Standard Products&apos;,   UnitPrice * Quantity , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>