force-app/main/default/objects/OrderItem/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF ( AND( OR( ISPICKVAL(Approval_Status__c, &quot;Pending Approval&quot;), ISPICKVAL(Approval_Status__c, &quot;Activated&quot;)),Contract_Status__c), &apos;Active&apos;, &apos;Not Active&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>